# aws-cognito-srp

./: .env.example  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  nightly.yml
infrastructure/state/: main.tf
infrastructure/tests/: local.config  outputs.tf
infrastructure/tests/cognito/: main.tf  outputs.tf
src/: constant.rs  error.rs  lib.rs
src/client/: device.rs  helper.rs  mod.rs  user.rs
tests/: device.rs  user.rs
tests/common/: client.rs  flow.rs  mod.rs  request.rs
