[package]
name = "aws-cognito-srp"
version = "0.2.3"
authors = ["Ryan Maber <ryan@ryanmaber.com>"]
license = "MIT"
description = "A Rust implementation of the Secure Remote Password (SRP) protocol for AWS Cognito."
keywords = ["aws", "cognito", "srp", "authentication", "device"]
categories = ["cryptography", "authentication"]
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"

homepage = "https://ryanmaber.com"
repository = "https://github.com/ryanmab/aws-cognito-srp"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
base64 = "0.22.1"
digest = "0.10.3"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
num-bigint = { version = "0.4.6", features = ["rand"] }
rand = "0.9.0"
regex = "1.6.0"
sha2 = "0.10.2"
thiserror = "2.0.11"
log = { version = "0.4.27", features = ["kv"] }
chrono = "0.4.26"

[dev-dependencies]
aws-config = "1.5.13"
aws-sdk-cognitoidentityprovider = "1.62.0"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
tokio = { version = "1.44.2", features = ["test-util", "macros", "tokio-macros"] }
