[package]
name = "aws-cognito-srp"
version = "0.2.4"
authors = ["Ryan Maber <ryan@ryanmaber.com>"]
license = "MIT"
description = "A Rust implementation of the Secure Remote Password (SRP) protocol for AWS Cognito."
keywords = ["aws", "cognito", "srp", "authentication", "device"]
categories = ["cryptography", "authentication"]
edition = "2024"
rust-version = "1.85.0"
readme = "README.md"

homepage = "https://ryanmaber.com"
repository = "https://github.com/ryanmab/aws-cognito-srp"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
base64 = "0.22.1"
digest = "0.10.7"
hex = "0.4.3"
hmac = "0.12.1"
num-bigint = { version = "0.4.6", features = ["rand"] }
rand = "0.10.0"
regex = "1.12.3"
sha2 = "0.10.9"
thiserror = "2.0.18"
log = { version = "0.4.29", features = ["kv"] }
chrono = "0.4.44"

[dev-dependencies]
aws-config = "1.8.15"
aws-sdk-cognitoidentityprovider = "1.113.0"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
tokio = { version = "1.51.1", features = ["test-util", "macros", "tokio-macros"] }
